--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "ng9-password-strength-bar",
-  "version": "1.1.0",
-  "description": "Angular Password Strength Bar",
+  "name": "@calin/ng9-password-strength-bar",
+  "version": "14.0.0",
+  "description": "Fork of Angular Password Strength Bar",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rnadler/ng9-password-strength-bar.git"
+    "url": "git+https://github.com/guilherme-calin/calin-ng9-password-strength-bar"
   },
-  "author": "Robert Nadler",
+  "author": "Guilherme Calin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rnadler/ng9-password-strength-bar/issues"
+    "url": "https://github.com/guilherme-calin/calin-ng9-password-strength-bar/issues"
   },
-  "homepage": "https://github.com/rnadler/ng9-password-strength-bar#readme",
+  "homepage": "https://github.com/guilherme-calin/calin-ng9-password-strength-bar#readme",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,39 +21,38 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "~9.1.3",
-    "@angular/common": "~9.1.3",
-    "@angular/compiler": "~9.1.3",
-    "@angular/core": "~9.1.3",
-    "@angular/forms": "~9.1.3",
-    "@angular/platform-browser": "~9.1.3",
-    "@angular/platform-browser-dynamic": "~9.1.3",
-    "@angular/router": "~9.1.3",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "^14.2.9",
+    "@angular/common": "^14.2.9",
+    "@angular/compiler": "^14.2.9",
+    "@angular/core": "^14.2.9",
+    "@angular/forms": "^14.2.9",
+    "@angular/platform-browser": "^14.2.9",
+    "@angular/platform-browser-dynamic": "^14.2.9",
+    "@angular/router": "^14.2.9",
+    "rxjs": "^7.5.7",
+    "tslib": "^2.4.1",
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.7",
-    "@angular-devkit/build-ng-packagr": "~0.901.7",
-    "@angular/cli": "~9.1.3",
-    "@angular/compiler-cli": "~9.1.3",
-    "@angular/language-service": "~9.1.3",
+    "@angular-devkit/build-angular": "^14.2.8",
+    "@angular/cli": "^14.2.8",
+    "@angular/compiler-cli": "^14.2.9",
+    "@angular/language-service": "^14.2.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^10.1.1",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
+    "jasmine-core": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.1",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
+    "ng-packagr": "^14.2.2",
+    "protractor": "^7.0.0",
+    "ts-node": "^10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "^4.8.4"
   }
 }
