--- a/projects/ng9-password-strength-bar/package.json
+++ b/projects/ng9-password-strength-bar/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "ng9-password-strength-bar",
-  "version": "1.1.0",
-  "description": "Angular Password Strength Bar",
+  "name": "@calin/ng9-password-strength-bar",
+  "version": "14.0.0",
+  "description": "Fork of Angular Password Strength Bar",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rnadler/ng9-password-strength-bar.git"
+    "url": "git+https://github.com/guilherme-calin/calin-ng9-password-strength-bar"
   },
-  "author": "Robert Nadler",
+  "author": "Guilherme Calin",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rnadler/ng9-password-strength-bar/issues"
+    "url": "https://github.com/guilherme-calin/calin-ng9-password-strength-bar/issues"
   },
-  "homepage": "https://github.com/rnadler/ng9-password-strength-bar#readme",
+  "homepage": "https://github.com/guilherme-calin/calin-ng9-password-strength-bar#readme",
   "peerDependencies": {
-    "@angular/common": "^9.1.9",
-    "@angular/core": "^9.1.9"
+    "@angular/common": "^14.2.9",
+    "@angular/core": "^14.2.9"
   },
   "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^2.4.1"
   }
 }
