--- a/angular.json
+++ b/angular.json
@@ -160,5 +160,8 @@
         }
       }
     }},
-  "defaultProject": "ng9-password-strength-bar"
+  "defaultProject": "ng9-password-strength-bar",
+  "cli": {
+    "analytics": false
+  }
 }
