--- a/projects/ng9-password-strength-bar/package.json
+++ b/projects/ng9-password-strength-bar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@gui.s.calin/ng9-password-strength-bar",
+  "name": "@guicalin/ng9-password-strength-bar",
   "version": "14.0.0",
   "description": "Fork of Angular Password Strength Bar",
   "repository": {
